--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no">
 
-<title>Zorro.html - Hiding Goods in the Shadow</title>
+<title>Zorro - Hiding Goods in the Shadow</title>
 
 <script src="//g.alicdn.com/mtb/lib-3rd/webcomponentsjs/webcomponents.js"></script>
 <div hidden><style>
@@ -5139,7 +5139,7 @@ html /deep/ .column-12 {
 <body>
 
 <z-bar>
-  <h1>Zorro.html</h1>
+  <h1>Zorro</h1>
   <p>Hiding Goods in the Shadow</p>
 </z-bar>
 
