--- a/index.html
+++ b/index.html
@@ -5214,7 +5214,7 @@ html /deep/ .column-12 {
 <body>
 
 <z-bar>
-  <div layout horizontal start>
+  <div layout horizontal start style="margin-top: 5px;">
     <div style="margin-right: 15px;">
       <img src="logo/z_64x64.png">
     </div>
