--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
 <link rel="apple-touch-icon" sizes="128x128" href="logo/logo_128x128.png">
 <link rel="apple-touch-icon" sizes="512x512" href="logo/logo_512x512.png">
 
-<style>
-  @font-face {font-family: 'Russo One'; font-style: normal; font-weight: 400; src: local('Russo One'), local('RussoOne-Regular'), url(fonts/RussoOne.woff2) format('woff2');}
-  @font-face {font-family: 'Play'; font-style: normal; font-weight: 400; src: local('Play'), url(fonts/Play.woff2) format('woff2');}
-  body {font-family: 'Play', sans-serif;}
-  h1 {font-family: 'Russo One', sans-serif;}
-</style>
-
 <script src="//g.alicdn.com/mtb/lib-3rd/webcomponentsjs/webcomponents.js"></script>
 <div hidden><style>
 [z] {
@@ -5170,6 +5163,13 @@ html /deep/ .column-12 {
 </div>
 
 <style>
+  @font-face {font-family: 'Russo One'; font-style: normal; font-weight: 400; src: local('Russo One'), local('RussoOne-Regular'), url(fonts/RussoOne.woff2) format('woff2');}
+  @font-face {font-family: 'Play'; font-style: normal; font-weight: 400; src: local('Play'), url(fonts/Play.woff2) format('woff2');}
+  body {font-family: 'Play', sans-serif;}
+  h1 {font-family: 'Russo One', sans-serif;}
+</style>
+
+<style>
   html[z] body {margin-top: 120px;}
 
   body > z-bar {position: fixed; top: 0; left: 0; right: 0; z-index: 100;}
@@ -5214,11 +5214,11 @@ html /deep/ .column-12 {
 <body>
 
 <z-bar>
-  <div layout horizontal start style="margin-top: 5px;">
+  <div layout="" horizontal="" start="" style="margin-top: 5px;">
     <div style="margin-right: 15px;">
       <img src="logo/z_64x64.png">
     </div>
-    <div flex>
+    <div flex="">
       <h1 style="margin: 0;">Zorro</h1>
       <p>Hiding Goods in the Shadow</p>
     </div>
