supported webfonts in safari

--- a/index.html
+++ b/index.html
@@ -5166,8 +5166,8 @@ html /deep/ .column-12 {
 </div>
 
 <style>
-  @font-face {font-family: 'Russo One'; font-style: normal; font-weight: 400; src: local('Russo One'), local('RussoOne-Regular'), url(fonts/RussoOne.woff2) format('woff2');}
-  @font-face {font-family: 'Play'; font-style: normal; font-weight: 400; src: local('Play'), url(fonts/Play.woff2) format('woff2');}
+  @font-face {font-family: 'Russo One'; font-style: normal; font-weight: 400; src: local('Russo One'), local('RussoOne-Regular'), url(fonts/RussoOne.woff2) format('woff2'), url(fonts/RussoOne.woff) format('woff');}
+  @font-face {font-family: 'Play'; font-style: normal; font-weight: 400; src: local('Play'), url(fonts/Play.woff2) format('woff2'), url(fonts/Play.woff) format('woff');}
   body {font-family: 'Play', sans-serif;}
   h1 {font-family: 'Russo One', sans-serif;}
 </style>
