added panel padding

--- a/index.html
+++ b/index.html
@@ -5177,7 +5177,7 @@ html /deep/ .column-12 {
 
   body > z-bar {position: fixed; top: 0; left: 0; right: 0; z-index: 100;}
 
-  section {max-width: 800px; margin: 0 auto 20px;}
+  section {max-width: 800px; margin: 0 auto 20px; padding: 0 20px;}
   section:not([name="z-typo"]) > h1 {background-color: #f0f0f0; background-image: url(logo/logo_64x64.png); background-size: 32px 32px; background-repeat: no-repeat; background-position: 20px center; padding: 15px 10px 15px 60px; border-radius: 3px; margin-left: -10px; margin-right: -10px;}
 
   section > div {margin-bottom: 10px;}
