fixed input[checkbox|radio] bug in ios

--- a/index.html
+++ b/index.html
@@ -3200,6 +3200,8 @@ html /deep/ .column-12 {
         margin-top: 1px \9;
         line-height: normal;
         padding: 0;
+        border: 0;
+        background-color: transparent;
         box-sizing: border-box;
       }
       .option input:focus {
@@ -5223,7 +5225,7 @@ html /deep/ .column-12 {
     </div>
     <div flex="">
       <h1 style="margin: 0;">Zorro</h1>
-      <p>Hiding Goods in the Shadow</p>
+      <p style="margin: 0;">Hiding Goods in the Shadow</p>
     </div>
   </div>
   <z-bar-minor>
