--- a/imports.html
+++ b/imports.html
@@ -29,4 +29,4 @@
 <link rel="import" href="../z-tooltip/z-tooltip.html">
 <link rel="import" href="../z-mask/z-mask.html">
 
-<link rel="import" href="../z-script/z-script.html">
+<!-- <link rel="import" href="../z-script/z-script.html"> -->
