fixed components path

--- a/components.html
+++ b/components.html
@@ -13,9 +13,9 @@
 <link rel="apple-touch-icon" sizes="128x128" href="logo/logo_128x128.png">
 <link rel="apple-touch-icon" sizes="512x512" href="logo/logo_512x512.png">
 
-<script src="../webcomponentsjs/webcomponents.js"></script>
+<script src="webcomponentsjs/webcomponents.js"></script>
 <link rel="import" href="imports.html">
-<link rel="import" href="../docs-maker/z-doc.html">
+<link rel="import" href="docs-maker/z-doc.html">
 
 <style>
   @font-face {font-family: 'Russo One'; font-style: normal; font-weight: 400; src: local('Russo One'), local('RussoOne-Regular'), url(fonts/RussoOne.woff2) format('woff2'), url(fonts/RussoOne.woff) format('woff');}
@@ -69,17 +69,17 @@
 <section>
   <h1>Typography</h1>
 
-  <z-doc name="z-typo"></z-doc>
-  <z-doc name="z-table"></z-doc>
+  <z-doc name="z-typo" path="z-typo/z-typo.html"></z-doc>
+  <z-doc name="z-table" path="z-table/z-table.html"></z-doc>
 </section>
 
 <section>
   <h1>Layout &amp; Container</h1>
 
-  <z-doc name="z-dock"></z-doc>
-  <z-doc name="z-grid"></z-doc>
-  <z-doc name="z-bar"></z-doc>
-  <!-- <z-doc name="z-phone"></z-doc> -->
+  <z-doc name="z-dock" path="z-dock/z-dock.html"></z-doc>
+  <z-doc name="z-grid" path="z-grid/z-grid.html"></z-doc>
+  <z-doc name="z-bar" path="z-bar/z-bar.html"></z-doc>
+  <!-- <z-doc name="z-phone" path="ame="z-phone/ame="z-phone.html"></z-doc> -->
   <section name="z-phone" style="padding: 2em;">
     <h1><code>&lt;z-phone&gt;</code></h1>
 
@@ -97,7 +97,7 @@
       <div style="background: silver; height: 800px;">Hello World</div>
     </z-phone>
 
-    <z-phone size="{'width': 374, 'height': 777, 'top': 102, 'bottom': 102, 'side': 27}" bgimg="../z-phone/iphone.png" innerwidth="240">
+    <z-phone size="{'width': 374, 'height': 777, 'top': 102, 'bottom': 102, 'side': 27}" bgimg="z-phone/iphone.png" innerwidth="240">
         <div style="background: silver; height: 800px;">Hello World</div>
     </z-phone>
   </section>
@@ -107,26 +107,26 @@
 <section>
   <h1>Atoms</h1>
 
-  <z-doc name="z-icon"></z-doc>
-  <z-doc name="z-btn"></z-doc>
-  <z-doc name="z-menu"></z-doc>
-  <z-doc name="z-dropdown"></z-doc>
-  <z-doc name="z-btn-group"></z-doc>
+  <z-doc name="z-icon" path="z-icon/z-icon.html"></z-doc>
+  <z-doc name="z-btn" path="z-btn/z-btn.html"></z-doc>
+  <z-doc name="z-menu" path="z-menu/z-menu.html"></z-doc>
+  <z-doc name="z-dropdown" path="z-dropdown/z-dropdown.html"></z-doc>
+  <z-doc name="z-btn-group" path="z-btn-group/z-btn-group.html"></z-doc>
 </section>
 
 <section>
   <h1>Navs</h1>
 
-  <z-doc name="z-nav"></z-doc>
-  <z-doc name="z-panel"></z-doc>
-  <z-doc name="z-breadcrumb"></z-doc>
-  <z-doc name="z-pagination"></z-doc>
+  <z-doc name="z-nav" path="z-nav/z-nav.html"></z-doc>
+  <z-doc name="z-panel" path="z-panel/z-panel.html"></z-doc>
+  <z-doc name="z-breadcrumb" path="z-breadcrumb/z-breadcrumb.html"></z-doc>
+  <z-doc name="z-pagination" path="z-pagination/z-pagination.html"></z-doc>
 </section>
 
 <section>
   <h1>Form &amp; Controls</h1>
 
-  <!-- <z-doc name="z-input"></z-doc> -->
+  <!-- <z-doc name="z-input" path="ame="z-input/ame="z-input.html"></z-doc> -->
   <section name="z-input" style="padding: 2em;">
     <h1><code>&lt;z-input&gt;</code></h1>
 
@@ -207,30 +207,30 @@
     </div>
   </section>
 
-  <z-doc name="z-progress"></z-doc>
+  <z-doc name="z-progress" path="z-progress/z-progress.html"></z-doc>
 </section>
 
 <section>
   <h1>Misc</h1>
 
-  <z-doc name="z-rmb"></z-doc>
-  <z-doc name="z-tag"></z-doc>
-  <z-doc name="z-time"></z-doc>
-  <z-doc name="z-note"></z-doc>
+  <z-doc name="z-rmb" path="z-rmb/z-rmb.html"></z-doc>
+  <z-doc name="z-tag" path="z-tag/z-tag.html"></z-doc>
+  <z-doc name="z-time" path="z-time/z-time.html"></z-doc>
+  <z-doc name="z-note" path="z-note/z-note.html"></z-doc>
 </section>
 
 <section>
   <h1>Layers</h1>
 
-  <z-doc name="z-dialog"></z-doc>
-  <z-doc name="z-tooltip"></z-doc>
-  <z-doc name="z-mask"></z-doc>
+  <z-doc name="z-dialog" path="z-dialog/z-dialog.html"></z-doc>
+  <z-doc name="z-tooltip" path="z-tooltip/z-tooltip.html"></z-doc>
+  <z-doc name="z-mask" path="z-mask/z-mask.html"></z-doc>
 </section>
 
 <!-- <section>
   <h1>Utils</h1>
 
-  <z-doc name="z-script"></z-doc>
+  <z-doc name="z-script" path="z-script/z-script.html"></z-doc>
 </section> -->
 
 <section style="margin-top: 200px; margin-bottom: 80px;">
